sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value valueCount
  var ecart=valueCount()
            ^